--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prebuild": "rimraf dist",
-    "build": "nest build"
+    "build": "nest build",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@devoxa/prisma-relay-cursor-connection": "2.2.1",
@@ -85,7 +86,7 @@
   "devDependencies": {
     "@nestjs/cli": "8.2.6",
     "@nestjs/testing": "8.4.6",
-    "@prisma/client": "^4.4.0",
+    "@prisma/client": "^5.18.0",
     "@types/bcrypt": "5.0.0",
     "@types/chance": "1.1.3",
     "@types/express": "4.17.13",
@@ -111,7 +112,7 @@
     "prettier": "2.6.2",
     "prettier-eslint": "15.0.1",
     "pretty-quick": "3.1.3",
-    "prisma": "^4.4.0",
+    "prisma": "^5.18.0",
     "prisma-dbml-generator": "0.9.1",
     "supertest": "6.2.3",
     "ts-jest": "28.0.4",
